# Phantom

./: .env  Phantom_download_software.py  Phantom_get_whether.py  Phantom_prompts.py  Phantom_screen_reader.py  Phantom_window_CTRL.py  agent.py  control_log.txt  main.py  pyproject.toml  requirements.txt
