[project]
name = "phantom-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "keyboard>=0.13.5",
    "livekit>=1.0.12",
    "livekit-agents[cartesia,deepgram,google,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "pyttsx3>=2.99",
    "selenium>=4.34.2",
    "speechrecognition>=3.14.3",
]
